--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <FrameLayout
         android:id="@+id/fl_main_center"
@@ -25,25 +26,50 @@
         android:layout_alignParentBottom="true"
         android:background="@color/color_black_30">
 
-        <RadioGroup
-            android:id="@+id/rg_main_top"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <!--<RadioGroup-->
+            <!--android:id="@+id/rg_main_top"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:orientation="horizontal">-->
+
+            <!--<RadioButton-->
+                <!--android:id="@+id/rb_main_shanghai"-->
+                <!--style="@style/main_tab_rb_style"-->
+                <!--android:drawableTop="@drawable/selector_main_top_tab_shanghai"-->
+                <!--android:text="@string/rl_main_shanghai" />-->
+
+            <!--<RadioButton-->
+                <!--android:id="@+id/rb_main_hangzhou"-->
+                <!--style="@style/main_tab_rb_style"-->
+                <!--android:drawableTop="@drawable/selector_main_top_tab_hangzhou"-->
+                <!--android:text="@string/rl_main_hangzhou" />-->
+        <!--</RadioGroup>-->
+        <LinearLayout
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:id="@+id/rg_main_top"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <RadioButton
+            <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/rb_main_shanghai"
-                style="@style/main_tab_rb_style"
-                android:drawableTop="@drawable/selector_main_top_tab_shanghai"
-                android:text="@string/rl_main_shanghai" />
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                app:lottie_fileName="lottie/shanghai.json"
+                />
 
-            <RadioButton
+            <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/rb_main_hangzhou"
-                style="@style/main_tab_rb_style"
-                android:drawableTop="@drawable/selector_main_top_tab_hangzhou"
-                android:text="@string/rl_main_hangzhou" />
-        </RadioGroup>
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                app:lottie_fileName="lottie/hangzhou.json"
+                />
+
+        </LinearLayout>
+
 
         <RadioGroup
             android:id="@+id/rg_main_bottom"
